Commit Task week 7

--- a/src/components/Movie/Movie.module.css
+++ b/src/components/Movie/Movie.module.css
@@ -1,3 +1,4 @@
+/* Small Screen */
 .movie {
   margin-bottom: 1rem;
 }
@@ -18,11 +19,15 @@
 .movie__date {
   color: #64748b;
 }
+
+/* Medium Screen */
 @media (min-width: 768px) {
   .movie {
     flex-basis: 50%;
   }
 }
+
+/* Large Screen */
 @media (min-width: 992px) {
   .movie {
     flex-basis: 25%;
