--- a/src/components/AddMovieForm/AddMovie.module.css
+++ b/src/components/AddMovieForm/AddMovie.module.css
@@ -1,78 +1,82 @@
+/* Small Screen */
 .container {
-  margin: 1rem;
+  margin: 5rem 1rem;
+  padding: 1rem;
 }
-.addmovie {
+
+.form {
   display: flex;
   flex-direction: column;
-  /* text-align: center; */
-}
-.addmovie__left {
-  margin-bottom: 1rem;
 }
 
-.addmovie__image {
+.form__left {
+  display: none;
+}
+
+.form__image {
   max-width: 100%;
-  height: auto;
   border-radius: 25px;
+  height: auto;
 }
 
-.addmovie__right {
-  /* margin: 0.5rem 0.8rem 0.5rem 0.8rem; */
-  max-width: 100%;
-  /* justify-content: center; */
-}
-.addmovie__title {
-  margin-bottom: 1rem;
-  font-size: 2.44rem;
+.form__title {
+  text-align: center;
   color: #4361ee;
+  font-size: 2.44rem;
+  margin-bottom: 1rem;
 }
 
-.addmovie__label {
-  margin-bottom: 1rem;
-  font-size: 0.5rem;
-  color: #64748b;
-  /* justify-content: left; */
-}
-.addmovie__input {
-  display: block;
-  width: 100%;
-  height: auto;
-  border: 2px solid #4361ee;
-  border-radius: 3px;
+.form__group {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 1rem;
 }
-.addmovie__button {
-  width: 100%;
-  height: auto;
+
+.form__label {
+  margin-bottom: 1rem;
+}
+
+.form__input {
+  outline: none;
+  padding: 1rem 0.5rem;
+  border-radius: 10px;
+  border: 1px solid #64748b;
+}
+
+.form__input:focus {
+  border: 1px solid #4361ee;
+}
+
+.form__button {
+  padding: 0.8rem 2rem;
+  border: none;
+  border-radius: 10px;
   background-color: #4361ee;
-  border: 2px solid #4361ee;
-  border-radius: 3px;
-  color: white;
-  margin-bottom: 1rem;
-  height: auto;
-  justify-content: center;
+  color: #fff;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
 }
+
+/* Large Screen */
 @media (min-width: 992px) {
   .container {
     max-width: 1200px;
-    margin: 3rem auto;
+    margin: 5rem auto;
   }
-  .addmovie {
-    margin: 0 1rem;
+
+  .form {
+    display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
   }
-  .addmovie__right {
-    flex-basis: 50%;
+
+  .form__left {
+    display: block;
+    flex-basis: 60%;
   }
-  .addmovie__left {
-    flex-basis: 50%;
-  }
-  .addmovie__title {
-    margin-bottom: 1rem;
-    font-size: 2.44rem;
-    color: #4361ee;
-    text-align: center;
+
+  .form__right {
+    flex-basis: 40%;
   }
 }
