--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -13,6 +13,10 @@
 .navbar__item {
   margin-bottom: 1rem;
 }
+.navbar__link {
+  color: white;
+  text-decoration: none;
+}
 /* medium screen */
 @media (min-width: 768px) {
   .navbar {
